--- a/Orientacoes/Felipe/Reunioes.org
+++ b/Orientacoes/Felipe/Reunioes.org
@@ -179,3 +179,6 @@ Esse trabalho tem como objetivo estudar o *fenômeno da financeirização* para 
 *** TODO Correlação de Spearmean mínimo de observações
 
 *** TODO Passar texto Arena
+* Reunião <2020-11-03 ter 17:00>
+
+Reunião com professor Mariano Laplane
