--- a/Articles/SFC/Simulation.org
+++ b/Articles/SFC/Simulation.org
@@ -1,5 +1,7 @@
 * Simulation TODOs and setups                                      :noexport:
 
+bibliography:refs.bib
+
 ** General config
 
 #+PROPERTY: header-args:python :session SFC  :exports none :results output :eval yes :cache no :async t :tangle ./codes/SFC_setup.py :python /usr/bin/python3.8 :eval never-export
@@ -21,11 +23,11 @@ import sympy as sp
 from sympy import pprint, cse
 
 def model(
-    alpha = 0.5, # Fazzarri Calibration. Talk to lucas
+    alpha = 1.0, # Fazzarri Calibration. Talk to lucas
     gamma_F = 0.08,
     gamma_u = 0.09, # Fazzarri Calibration
     g_Z = 0.025, # Fazzarri Calibration
-    omega = 0.5, # Check
+    omega = 0.5*0.5, # Fazzaru alpha*omwga
     rm = 0.01,
     spread_l = 0,
     spread_mo = 0,
@@ -379,6 +381,10 @@ def other_plots(shock, df):
 #+END_SRC
 
 #+RESULTS:
+: Python 3.8.5 (default, Jul 28 2020, 12:59:40) 
+: [GCC 9.3.0] on linux
+: Type "help", "copyright", "credits" or "license" for more information.
+: python.el: native completion setup loaded
 
 
 ** Increase in autonomous growth rate ($g_Z$)
@@ -394,44 +400,49 @@ other_plots(shock, df=df)
 
 shock1 = shock.round(decimals = 5).tail(1).transpose().loc['alpha':,:]
 shock1.columns = ['$\Delta \phi_0$']
-print(shock1)
+print(shock1.to_latex())
 #+END_SRC
 
 #+RESULTS:
 :results:
-$\Delta \phi_0$
-alpha         5.000000e-01
-gamma_F       8.000000e-02
-gamma_u       9.000000e-02
-omega         5.000000e-01
-rm            1.000000e-02
-spread_l      0.000000e+00
-spread_mo     0.000000e+00
-un            8.000000e-01
-v             1.200000e+00
-phi_0         3.000000e-02
-phi_1         1.000000e-01
-R             7.000000e-01
-infla         0.000000e+00
-gC            0.000000e+00
-real_data     0.000000e+00
-_K_f__1       1.202767e+26
-_M_h__1       9.083433e+26
-_MO__1        5.860454e+26
-_Lk__1        1.367432e+27
-_Ck__1        3.853792e+25
-_Lf__1        9.951484e+24
-_h__1         4.350000e-02
-_L__1         1.377383e+27
-_M__1         9.083433e+26
-_K_HD__1      5.860454e+26
-_I_h__1       1.651634e+25
-_ph__1        1.000000e+00
-TIME          1.051000e+03
-Ih/Y          2.119500e-01
-I/Y           2.554500e-01
-Z/Y           7.065000e-01
-gY            2.900000e-02
+\begin{tabular}{lr}
+\toprule
+{} &  \$\textbackslash Delta \textbackslash phi\_0\$ \\
+\midrule
+alpha     &     1.000000e+00 \\
+gamma\_F   &     8.000000e-02 \\
+gamma\_u   &     9.000000e-02 \\
+omega     &     2.500000e-01 \\
+rm        &     1.000000e-02 \\
+spread\_l  &     0.000000e+00 \\
+spread\_mo &     0.000000e+00 \\
+un        &     8.000000e-01 \\
+v         &     1.200000e+00 \\
+phi\_0     &     3.000000e-02 \\
+phi\_1     &     1.000000e-01 \\
+R         &     7.000000e-01 \\
+infla     &     0.000000e+00 \\
+gC        &     0.000000e+00 \\
+real\_data &     0.000000e+00 \\
+\_K\_f\_\_1   &     1.202782e+26 \\
+\_M\_h\_\_1   &     1.906567e+27 \\
+\_MO\_\_1    &     5.860454e+26 \\
+\_Lk\_\_1    &     1.367439e+27 \\
+\_Ck\_\_1    &     3.853813e+25 \\
+\_Lf\_\_1    &    -4.691706e+25 \\
+\_h\_\_1     &     4.350000e-02 \\
+\_L\_\_1     &     1.320522e+27 \\
+\_M\_\_1     &     1.906567e+27 \\
+\_K\_HD\_\_1  &     5.860454e+26 \\
+\_I\_h\_\_1   &     1.651634e+25 \\
+\_ph\_\_1    &     1.000000e+00 \\
+TIME      &     1.051000e+03 \\
+Ih/Y      &     2.119500e-01 \\
+I/Y       &     2.554500e-01 \\
+Z/Y       &     7.065000e-01 \\
+gY        &     2.900000e-02 \\
+\bottomrule
+\end{tabular}
 :end:
 
 
@@ -448,44 +459,49 @@ plot_norms(shock = shock, filename = 'Shock_2Norms.png', df=df)
 other_plots(shock, df)
 shock2 = shock.round(decimals = 3).tail(1).transpose().loc['alpha':,:]
 shock2.columns = ['$\Delta \omega$']
-print(shock2)
+print(shock2.to_latex())
 #+END_SRC
 
 #+RESULTS:
 :results:
-$\Delta \omega$
-alpha         5.000000e-01
-gamma_F       8.000000e-02
-gamma_u       9.000000e-02
-omega         4.900000e-01
-rm            1.000000e-02
-spread_l      0.000000e+00
-spread_mo     0.000000e+00
-un            8.000000e-01
-v             1.200000e+00
-phi_0         2.500000e-02
-phi_1         1.000000e-01
-R             7.000000e-01
-infla         0.000000e+00
-gC            0.000000e+00
-real_data     0.000000e+00
-_K_f__1       9.060400e+23
-_M_h__1       7.400107e+24
-_MO__1        5.428750e+24
-_Lk__1        1.266703e+25
-_Ck__1        2.968835e+23
-_Lf__1       -1.249747e+23
-_h__1         3.600000e-02
-_L__1         1.254205e+25
-_M__1         7.400107e+24
-_K_HD__1      5.428750e+24
-_I_h__1       1.272363e+23
-_ph__1        1.000000e+00
-TIME          1.051000e+03
-Ih/Y          2.160000e-01
-I/Y           2.520000e-01
-Z/Y           7.190000e-01
-gY            2.400000e-02
+\begin{tabular}{lr}
+\toprule
+{} &  \$\textbackslash Delta \textbackslash omega\$ \\
+\midrule
+alpha     &     1.000000e+00 \\
+gamma\_F   &     8.000000e-02 \\
+gamma\_u   &     9.000000e-02 \\
+omega     &     2.400000e-01 \\
+rm        &     1.000000e-02 \\
+spread\_l  &     0.000000e+00 \\
+spread\_mo &     0.000000e+00 \\
+un        &     8.000000e-01 \\
+v         &     1.200000e+00 \\
+phi\_0     &     2.500000e-02 \\
+phi\_1     &     1.000000e-01 \\
+R         &     7.000000e-01 \\
+infla     &     0.000000e+00 \\
+gC        &     0.000000e+00 \\
+real\_data &     0.000000e+00 \\
+\_K\_f\_\_1   &     8.997916e+23 \\
+\_M\_h\_\_1   &     1.745460e+25 \\
+\_MO\_\_1    &     5.428750e+24 \\
+\_Lk\_\_1    &     1.266708e+25 \\
+\_Ck\_\_1    &     2.968848e+23 \\
+\_Lf\_\_1    &    -6.412329e+23 \\
+\_h\_\_1     &     3.600000e-02 \\
+\_L\_\_1     &     1.202585e+25 \\
+\_M\_\_1     &     1.745460e+25 \\
+\_K\_HD\_\_1  &     5.428750e+24 \\
+\_I\_h\_\_1   &     1.272363e+23 \\
+\_ph\_\_1    &     1.000000e+00 \\
+TIME      &     1.051000e+03 \\
+Ih/Y      &     2.170000e-01 \\
+I/Y       &     2.530000e-01 \\
+Z/Y       &     7.240000e-01 \\
+gY        &     2.400000e-02 \\
+\bottomrule
+\end{tabular}
 :end:
 
 ** Increase in mortgage interest rate
@@ -501,39 +517,44 @@ clock_plots(shock = shock, filename = 'Clock_3.png', variable='rmo')
 plot_shock(shock = shock, filename = 'Shock_3.png', df=df)
 plot_norms(shock = shock, filename = 'Shock_3Norms.png', df=df)
 other_plots(shock, df=df)
-print(shock3)
+print(shock3.to_latex())
 #+END_SRC
 
 #+RESULTS:
 :results:
-$\Delta rm$
-alpha      5.000000e-01
-gamma_F    8.000000e-02
-gamma_u    9.000000e-02
-omega      5.000000e-01
-rm         1.200000e-02
-spread_l   0.000000e+00
-spread_mo  0.000000e+00
-un         8.000000e-01
-v          1.200000e+00
-phi_0      2.500000e-02
-phi_1      1.000000e-01
-R          7.000000e-01
-infla      0.000000e+00
-gC         0.000000e+00
-real_data  0.000000e+00
-_K_f__1    7.143483e+23
-_M_h__1    3.649994e+24
-_MO__1     4.297398e+24
-_Lk__1     1.002723e+25
-_Ck__1     2.326220e+23
-_Lf__1    -9.158435e+22
-_h__1      3.600000e-02
-_L__1      9.935648e+24
-_M__1      3.649994e+24
-_K_HD__1   4.297398e+24
-_I_h__1    9.969545e+22
-_ph__1     1.000000e+00
+\begin{tabular}{lr}
+\toprule
+{} &   \$\textbackslash Delta rm\$ \\
+\midrule
+alpha     &  1.000000e+00 \\
+gamma\_F   &  8.000000e-02 \\
+gamma\_u   &  9.000000e-02 \\
+omega     &  2.500000e-01 \\
+rm        &  1.200000e-02 \\
+spread\_l  &  0.000000e+00 \\
+spread\_mo &  0.000000e+00 \\
+un        &  8.000000e-01 \\
+v         &  1.200000e+00 \\
+phi\_0     &  2.500000e-02 \\
+phi\_1     &  1.000000e-01 \\
+R         &  7.000000e-01 \\
+infla     &  0.000000e+00 \\
+gC        &  0.000000e+00 \\
+real\_data &  0.000000e+00 \\
+\_K\_f\_\_1   &  7.143535e+23 \\
+\_M\_h\_\_1   &  1.381441e+25 \\
+\_MO\_\_1    &  4.297398e+24 \\
+\_Lk\_\_1    &  1.002726e+25 \\
+\_Ck\_\_1    &  2.326227e+23 \\
+\_Lf\_\_1    & -5.102520e+23 \\
+\_h\_\_1     &  3.600000e-02 \\
+\_L\_\_1     &  9.517011e+24 \\
+\_M\_\_1     &  1.381441e+25 \\
+\_K\_HD\_\_1  &  4.297398e+24 \\
+\_I\_h\_\_1   &  9.969545e+22 \\
+\_ph\_\_1    &  1.000000e+00 \\
+\bottomrule
+\end{tabular}
 :end:
 
 ** TODO Decrease in mortgage interest rate
@@ -549,39 +570,44 @@ clock_plots(shock = shock, filename = 'Clock_3b.png', variable='rmo')
 plot_shock(shock = shock, filename = 'Shock_3b.png', df=df)
 plot_norms(shock = shock, filename = 'Shock_3Normsb.png', df=df)
 other_plots(shock, df=df)
-print(shock3b)
+print(shock3b.to_latex())
 #+END_SRC
 
 #+RESULTS:
 :results:
-$\Downarrow rm$
-alpha         5.000000e-01
-gamma_F       8.000000e-02
-gamma_u       9.000000e-02
-omega         5.000000e-01
-rm            5.000000e-03
-spread_l      0.000000e+00
-spread_mo     0.000000e+00
-un            8.000000e-01
-v             1.200000e+00
-phi_0         2.500000e-02
-phi_1         1.000000e-01
-R             7.000000e-01
-infla         0.000000e+00
-gC            0.000000e+00
-real_data     0.000000e+00
-_K_f__1       1.488134e+24
-_M_h__1       1.602903e+25
-_MO__1        8.664652e+24
-_Lk__1        2.021746e+25
-_Ck__1        4.834824e+23
-_Lf__1       -1.337916e+23
-_h__1         3.700000e-02
-_L__1         2.008366e+25
-_M__1         1.602903e+25
-_K_HD__1      8.664652e+24
-_I_h__1       2.072074e+23
-_ph__1        1.000000e+00
+\begin{tabular}{lr}
+\toprule
+{} &  \$\textbackslash Downarrow rm\$ \\
+\midrule
+alpha     &     1.000000e+00 \\
+gamma\_F   &     8.000000e-02 \\
+gamma\_u   &     9.000000e-02 \\
+omega     &     2.500000e-01 \\
+rm        &     5.000000e-03 \\
+spread\_l  &     0.000000e+00 \\
+spread\_mo &     0.000000e+00 \\
+un        &     8.000000e-01 \\
+v         &     1.200000e+00 \\
+phi\_0     &     2.500000e-02 \\
+phi\_1     &     1.000000e-01 \\
+R         &     7.000000e-01 \\
+infla     &     0.000000e+00 \\
+gC        &     0.000000e+00 \\
+real\_data &     0.000000e+00 \\
+\_K\_f\_\_1   &     1.488145e+24 \\
+\_M\_h\_\_1   &     2.792507e+25 \\
+\_MO\_\_1    &     8.664652e+24 \\
+\_Lk\_\_1    &     2.021752e+25 \\
+\_Ck\_\_1    &     4.834839e+23 \\
+\_Lf\_\_1    &    -9.571063e+23 \\
+\_h\_\_1     &     3.700000e-02 \\
+\_L\_\_1     &     1.926042e+25 \\
+\_M\_\_1     &     2.792507e+25 \\
+\_K\_HD\_\_1  &     8.664652e+24 \\
+\_I\_h\_\_1   &     2.072074e+23 \\
+\_ph\_\_1    &     1.000000e+00 \\
+\bottomrule
+\end{tabular}
 :end:
 
 ** Increase in house inflation
@@ -598,44 +624,49 @@ other_plots(shock, df=df)
 
 shock4 = shock.round(decimals = 3).tail(1).transpose().loc['alpha':,:]
 shock4.columns = ['$\pi$']
-print(shock4)
+print(shock4.to_latex())
 #+END_SRC
 
 #+RESULTS:
 :results:
-$\pi$
-alpha      5.000000e-01
-gamma_F    8.000000e-02
-gamma_u    9.000000e-02
-omega      5.000000e-01
-rm         1.000000e-02
-spread_l   0.000000e+00
-spread_mo  0.000000e+00
-un         8.000000e-01
-v          1.200000e+00
-phi_0      2.500000e-02
-phi_1      1.000000e-01
-R          7.000000e-01
-infla      5.000000e-02
-gC         0.000000e+00
-real_data  0.000000e+00
-_K_f__1    9.990957e+25
-_M_h__1    7.564192e+26
-_MO__1     4.902237e+26
-_Lk__1     1.143849e+27
-_Ck__1     3.203095e+25
-_Lf__1     7.643164e+24
-_h__1      4.300000e-02
-_L__1      1.151492e+27
-_M__1      7.564192e+26
-_K_HD__1   4.902237e+26
-_I_h__1    1.372763e+25
-_ph__1     1.472685e+21
-TIME       1.051000e+03
-Ih/Y       2.120000e-01
-I/Y        2.550000e-01
-Z/Y        7.070000e-01
-gY         2.900000e-02
+\begin{tabular}{lr}
+\toprule
+{} &         \$\textbackslash pi\$ \\
+\midrule
+alpha     &  1.000000e+00 \\
+gamma\_F   &  8.000000e-02 \\
+gamma\_u   &  9.000000e-02 \\
+omega     &  2.500000e-01 \\
+rm        &  1.000000e-02 \\
+spread\_l  &  0.000000e+00 \\
+spread\_mo &  0.000000e+00 \\
+un        &  8.000000e-01 \\
+v         &  1.200000e+00 \\
+phi\_0     &  2.500000e-02 \\
+phi\_1     &  1.000000e-01 \\
+R         &  7.000000e-01 \\
+infla     &  5.000000e-02 \\
+gC        &  0.000000e+00 \\
+real\_data &  0.000000e+00 \\
+\_K\_f\_\_1   &  9.991086e+25 \\
+\_M\_h\_\_1   &  1.594162e+27 \\
+\_MO\_\_1    &  4.902237e+26 \\
+\_Lk\_\_1    &  1.143855e+27 \\
+\_Ck\_\_1    &  3.203113e+25 \\
+\_Lf\_\_1    & -3.991676e+25 \\
+\_h\_\_1     &  4.300000e-02 \\
+\_L\_\_1     &  1.103939e+27 \\
+\_M\_\_1     &  1.594162e+27 \\
+\_K\_HD\_\_1  &  4.902237e+26 \\
+\_I\_h\_\_1   &  1.372763e+25 \\
+\_ph\_\_1    &  1.472685e+21 \\
+TIME      &  1.051000e+03 \\
+Ih/Y      &  2.120000e-01 \\
+I/Y       &  2.550000e-01 \\
+Z/Y       &  7.070000e-01 \\
+gY        &  2.900000e-02 \\
+\bottomrule
+\end{tabular}
 :end:
 
 
@@ -696,10 +727,10 @@ print(table.to_latex(
 \toprule
 {} &  Base scenario &  $\Delta \phi_0$ &  $\Delta \omega$ &  $\Delta rm$ &  $\pi$ \\
 \midrule
-$\alpha$      &         0.5000 &           0.5000 &           0.5000 &       0.5000 & 0.5000 \\
+$\alpha$      &         1.0000 &           1.0000 &           1.0000 &       1.0000 & 1.0000 \\
 $\gamma_F$    &         0.0800 &           0.0800 &           0.0800 &       0.0800 & 0.0800 \\
 $\gamma_u$    &         0.0900 &           0.0900 &           0.0900 &       0.0900 & 0.0900 \\
-$\omega$      &         0.5000 &           0.5000 &           0.4900 &       0.5000 & 0.5000 \\
+$\omega$      &         0.2500 &           0.2500 &           0.2400 &       0.2500 & 0.2500 \\
 $rm$          &         0.0100 &           0.0100 &           0.0100 &       0.0120 & 0.0100 \\
 $\sigma_{l}$  &         0.0000 &           0.0000 &           0.0000 &       0.0000 & 0.0000 \\
 $\sigma_{mo}$ &         0.0000 &           0.0000 &           0.0000 &       0.0000 & 0.0000 \\
@@ -1163,7 +1194,7 @@ Therefore, we find a stable debt dynamics for both capitalists and firms (other 
 
 
 ** Plugging real data
-
+#+LATEX: \label{real_sim}
 
 Finally, we include houses own interest rate data into our model (see Figure ref:propria_investo).
 To do so, each year corresponds to ten simulated periods for visualization reasons.
