--- a/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
+++ b/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
@@ -1,4 +1,4 @@
-% Created 2020-10-23 sex 15:16
+% Created 2020-11-02 seg 20:19
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation]{beamer}
   \usepackage{csquotes, caption}
@@ -16,9 +16,9 @@
 
 
 \section{Introdução}
-\label{sec:org2273f79}
+\label{sec:orgc2f6d21}
 
-\begin{frame}[label={sec:orgf045947}]{Estrutura de tópicos e convenções}
+\begin{frame}[label={sec:orge929621}]{Estrutura de tópicos e convenções}
 A aula terá a seguinte estrutura
 
 \begin{itemize}
@@ -34,9 +34,9 @@ A aula terá a seguinte estrutura
 \end{frame}
 
 \section{O cenário internacional, o setor externo e a herança maldita}
-\label{sec:org0077b80}
+\label{sec:org868dfac}
 
-\begin{frame}[label={sec:orge7801ed}]{Panorama Internacional}
+\begin{frame}[label={sec:org1969d7a}]{Panorama Internacional}
 \begin{itemize}
 \item Crise Mexicana (1994/5)
 \item Brasileira (1998/9)
@@ -44,7 +44,7 @@ A aula terá a seguinte estrutura
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8e0b58b}]{Crescimento e desequilíbrios globais}
+\begin{frame}[label={sec:orgb976862}]{Crescimento e desequilíbrios globais}
 Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâmico e desequiblibrado entre 2002/3 a 2007/8
 
 \alert{Engrenagem comercial com 3 elos}
@@ -67,7 +67,7 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1c7957d}]{A Herança Maldita}
+\begin{frame}[label={sec:orgdda72a3}]{A Herança Maldita}
 \begin{itemize}
 \item Instabilidade macroeconômica
 \begin{itemize}
@@ -85,9 +85,9 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 
 
 \section{Governos Lula e suas fases}
-\label{sec:orgc2dabcb}
+\label{sec:orgd2cd795}
 
-\begin{frame}[label={sec:orgd9c9938}]{Primeira Fase}
+\begin{frame}[label={sec:org337d20c}]{Primeira Fase}
 Experimento desenvolvimentista junto de uma política macroeconômica conservadora:
 \begin{itemize}
 \item Continuidade do tripé
@@ -105,7 +105,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \alert{Contexto de transição complexa:} desconfiança dos credores e pressões financeiras
 \end{frame}
 
-\begin{frame}[label={sec:org766c185}]{Segunda fase}
+\begin{frame}[label={sec:orgc417e75}]{Segunda fase}
 \begin{itemize}
 \item Retomada do Estado como elemento condutor do Crescimento
 \item Desenho da política fiscal no centro de proposta do desenvolvimento
@@ -116,7 +116,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc20794d}]{Fatores determinantes}
+\begin{frame}[label={sec:org2258c24}]{Fatores determinantes}
 \begin{itemize}
 \item Impulsos externos favoráveis
 \begin{itemize}
@@ -137,7 +137,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org09ba64e}]{Alguns resultados}
+\begin{frame}[label={sec:org1c1e245}]{Alguns resultados}
 \begin{itemize}
 \item Queda da taxa de desemprego aberta
 \item Valorização real do salário mínimo
@@ -156,9 +156,9 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 
 
 \section{(Des)Continuidades e dificuldades}
-\label{sec:org1d5c1aa}
+\label{sec:org661d1f0}
 
-\begin{frame}[label={sec:org206cca3}]{Continuidades}
+\begin{frame}[label={sec:org79f81c4}]{Continuidades}
 \begin{block}{Política cambial}
 Pouco mudou ao longo do tempo
 
@@ -190,7 +190,7 @@ Não foi alterado o regime fiscal definido na era FHC
 \end{frame}
 
 
-\begin{frame}[label={sec:org95532d0}]{Descontinuidades}
+\begin{frame}[label={sec:org2c48116}]{Descontinuidades}
 Conjugação de políticas de incentivo à renda e ao mercado interno
 
 \begin{itemize}
@@ -210,7 +210,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 
-\begin{frame}[label={sec:orge8369cb}]{Dificuldades}
+\begin{frame}[label={sec:org5b09746}]{Dificuldades}
 \begin{itemize}
 \item Limites do crescimento com expansão da demanda de consumo via crédito e políticas sociais
 \item Retomada da taxa de investimento, mas nível baixo
@@ -223,12 +223,12 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 \section{Governo(s?) Dilma}
-\label{sec:org234cc0b}
+\label{sec:org423e5de}
 
-\begin{frame}[label={sec:org753619e}]{Os três tenores}
+\begin{frame}[label={sec:org08617b8}]{Os três tenores}
 \end{frame}
 
-\begin{frame}[label={sec:orgab4d20d}]{Medidas macroprudenciais}
+\begin{frame}[label={sec:orgc28458a}]{Medidas macroprudenciais}
 \alert{Medidas macroprudenciais:*} Redução do crescimento do crédito.
 
 \begin{itemize}
@@ -249,7 +249,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 
-\begin{frame}[label={sec:org01713a0}]{Desaceleração rudimentar I}
+\begin{frame}[label={sec:orgcc09baa}]{Desaceleração rudimentar I}
 \begin{center}
 \begin{tabular}{lll}
 \hline
@@ -264,7 +264,7 @@ Taxa de desemprego & 9.0\% & 5.4\%\\
 \alert{Principal mudança:} do incentivo à demanda agregada ao incetivo ao investimento privado.
 \end{frame}
 
-\begin{frame}[label={sec:orgc68190e}]{Desaceleração rudimentar II}
+\begin{frame}[label={sec:orgcd9deb4}]{Desaceleração rudimentar II}
 \begin{table}[htbp]
 \caption{Consumo das famílias}
 \centering
@@ -273,45 +273,55 @@ Taxa de desemprego & 9.0\% & 5.4\%\\
  & 2004-2010 & 2011-2014\\
 Crédito para habitação & 21,5\% & 4,6\%\\
 Hipotecas & 20,1\% & 29,3\%\\
-Salário real (emprego formal) & 2,9\% & 2,9\%\\
-Renda disponível real das famílias & 5,3\% & 1,2\%\\
+Salário real (emp, formal) & 2,9\% & 2,9\%\\
+Renda disponível das famílias & 5,3\% & 1,2\%\\
 \hline
 \end{tabular}
 \end{table}
 \end{frame}
 
-\begin{frame}[label={sec:orgd09a927}]{Desaceleração rudimentar III}
+\begin{frame}[label={sec:orgd84bf93}]{Desaceleração rudimentar III}
 \begin{table}[htbp]
 \caption{Política fiscal}
 \centering
 \begin{tabular}{lll}
+\hline
  & 2004-2010 & 2011-2014\\
 Superávit primário/PIB & 3,2\% & 1,7\%\\
 Receitas do setor público & 7,2\% & 1,2\%\\
-Transferências públicas para as famílias & 5,6\% & 4,9\%\\
-Investimento das Empresas Estatais (Federal) & 16,3\% & -2,7\%\\
+Transf. públicas para as famílias & 5,6\% & 4,9\%\\
+Invest. Emp. Estatais (Federal) & 16,3\% & -2,7\%\\
 Investimento Adm, Pública & 14,0\% & -1,0\%\\
+\hline
 \end{tabular}
 \end{table}
 \end{frame}
 
 
-\begin{frame}[label={sec:org88a33b9}]{Prêambulo para a ópera do fim do mundo}
-\href{./opera.jpg}{Brasil, o Golpe: A Ópera do fim do mundo - Flávio Tavares}
+\begin{frame}[label={sec:orgb59e100}]{\href{https://www.causaoperaria.org.br/brasil-o-golpe-a-opera-do-fim-do-mundo-artista-retrata-o-golpe-de-estado-no-pais/}{Prêambulo para a ópera do fim do mundo}}
+\begin{figure}[htb]
+\centering
+\caption{Brasil, O Golpe: A Ópera do fim do mundo} 
+\includegraphics[width = 0.9\textwidth]{./figs/opera.png}
+\caption*{\textbf{Fonte:} Jornal GGN}
+\end{figure}
 \end{frame}
 
-\section{Idade das trevas}
-\label{sec:org0bc2d7f}
 
 \section{Dados}
-\label{sec:orgcf705bd}
+\label{sec:orgc1dfd65}
 
-\begin{frame}[label={sec:orge8252f8}]{Índice EMBI Brasil (Fim de período)}
+\begin{frame}[label={sec:org1fb6207}]{Índice EMBI Brasil (Fim de período)}
+\begin{figure}[htb]
+\centering
+\caption{Spread Soberano = EMBI+} 
+\includegraphics[width = 0.9\textwidth]{./figs/EMBI.png}
+\label{fig:embi}
+\caption*{\textbf{Fonte:} IPEADATA}
+\end{figure}
 \end{frame}
 
-
-
-\begin{frame}[label={sec:org9de1d7e}]{O ciclo das commodities}
+\begin{frame}[label={sec:orgb0e6406}]{O ciclo das commodities}
 \begin{figure}[htb]
 \centering
 \caption{Índice de Commodities - Brasil\\Média móvel 12 meses} 
@@ -321,11 +331,18 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org98f2f0f}]{O ciclo de liquidez internacional para países emergentes}
-\alert{Dado:} IIF (?)
+\begin{frame}[label={sec:orgcb7e044}]{Fluxos de capital}
+\begin{figure}[htb]
+\centering
+\caption{Balanço de Bagamentos - Conta financeira e seus componentes} 
+\includegraphics[width = 0.9\textwidth]{./figs/FluxosInternacionais.png}
+\label{fig:financeira}
+\caption*{\textbf{Fonte:} BCB}
+\end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgc5e5e0e}]{Evolução das reservas internacionais líquidas}
+
+\begin{frame}[label={sec:org0d100b9}]{Evolução das reservas internacionais líquidas}
 \begin{figure}[htb]
 \centering
 \caption{Reservas Internacionais} 
@@ -336,16 +353,40 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org31c69c6}]{PIB puxado pelo mercado doméstico}
-\alert{Dado:} Decomposição do crescimento (doméstico e exportações líquidas)
+\begin{frame}[label={sec:orgc1d516a}]{Taxa de crescimento e IBC-Br}
+\begin{figure}[htb]
+\centering
+\caption{Taxa de crescimento do PIB: Efetiva x IBCBr} 
+\includegraphics[width = 0.9\textwidth]{./figs/PIB_IBCBr.png}
+\label{fig:ibcbr}
+\caption*{\textbf{Fonte:} }
+\end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:org787a09f}]{Crescimento e o investimento induzido}
-\alert{Dado:} Decomposição do crescimento (Todos os componentes da demanda)
+
+\begin{frame}[label={sec:orgf265311}]{PIB puxado pelo mercado doméstico}
+\begin{figure}[htb]
+\centering
+\caption{Decomposição da taxa de crescimento do produto - Domésticos e externos} 
+\includegraphics[width = 0.9\textwidth]{./figs/PIB_Decomp.png}
+\label{fig:cycles}
+\caption*{\textbf{Fonte:} BCB}
+\end{figure}
 \end{frame}
 
 
-\begin{frame}[label={sec:org31ce4c7}]{Saldo de Crédito}
+\begin{frame}[label={sec:org682aa30}]{Crescimento e o investimento induzido}
+\begin{figure}[htb]
+\centering
+\caption{Taxa de crescimento do produto - decomposição total} 
+\includegraphics[width = 0.9\textwidth]{./figs/PIB_Decomp_Total.png}
+\label{fig:PIB_Decomp_Total}
+\caption*{\textbf{Fonte:} BCB}
+\end{figure}
+\end{frame}
+
+
+\begin{frame}[label={sec:orgc269f8b}]{Saldo de Crédito}
 \begin{figure}[htb]
 \centering
 \caption{Saldo de Crédito\\em \% do PIB} 
@@ -356,7 +397,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org46953ec}]{Emprego}
+\begin{frame}[label={sec:org04d6dab}]{Emprego}
 \begin{figure}[htb]
 \centering
 \caption{Índice do Emprego Formal} 
@@ -367,7 +408,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:orga7d0a82}]{Evolução dos rendimentos (I)}
+\begin{frame}[label={sec:orga565d97}]{Evolução dos rendimentos (I)}
 \begin{figure}[htb]
 \centering
 \caption{Rendimento médio real efetivo das pessoas ocupadas\\ Não desazonalizada} 
@@ -380,7 +421,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org9bc5777}]{Evolução dos rendimentos (II)}
+\begin{frame}[label={sec:orgf577dda}]{Evolução dos rendimentos (II)}
 \begin{figure}[htb]
 \centering
 \caption{Massa de rendimento real habitual de todos os trabalhos} 
@@ -392,17 +433,17 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \alert{Memo:} Série anterior descontinuada
 \end{frame}
 
-\begin{frame}[label={sec:orgd4850b0}]{Consumo das famílias}
+\begin{frame}[label={sec:orgb025fc5}]{Consumo das famílias}
 \begin{figure}[htb]
 \centering
 \caption{Consumo das famílias\\Jan/1995=100} 
 \includegraphics[width = 0.9\textwidth]{./figs/ConsumoFamilias.png}
 \label{fig:Consumo}
-\caption*{\textbf{Source:} IBGE}
+\caption*{\textbf{Fonte:} IBGE}
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:org2b1bd48}]{Endividamento das famílias}
+\begin{frame}[label={sec:orgb4b8348}]{Endividamento das famílias}
 \begin{figure}[htb]
 \centering
 \caption{Endividamento das famílias\\em \% do PIB} 
@@ -413,30 +454,38 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org2868f60}]{Investimento público em recuperação}
+\begin{frame}[label={sec:orgb32398a}]{Investimento público em recuperação}
 \alert{Dado:} Taxa de investimento público (\%PIB)
 \end{frame}
 
-\begin{frame}[label={sec:org75c283f}]{A evolução favorável da dívida pública}
+\begin{frame}[label={sec:org8753cd6}]{A evolução favorável da dívida pública}
 \alert{Dado:} Evolução da dívida bruta e líquida (\%PIB)
 \end{frame}
 
-\begin{frame}[label={sec:org810ffa2}]{Resultado primário do Governo Central}
+\begin{frame}[label={sec:org89e734f}]{Resultado primário do Governo Central}
+\begin{figure}[htb]
+\centering
+\caption{Setor público consolidado em \% do PIB} 
+\includegraphics[width = 0.9\textwidth]{./figs/Resultado_Primario.png}
+\label{fig:primario}
+\caption*{\textbf{Fonte:} BCB}
+\end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgad7d032}]{Dívida líquida do setor público}
+
+\begin{frame}[label={sec:org5948946}]{Dívida líquida do setor público}
 \begin{figure}[htb]
 \centering
 \caption{Dívida líquida do Governo Federal e Banco Central\\em \% do PIB} 
 \includegraphics[width = 0.9\textwidth]{./figs/DividaLiquida.png}
 \label{fig:divliq}
-\caption*{\textbf{Source:} BCB-DSTAT}
+\caption*{\textbf{Fonte:} BCB-DSTAT}
 \end{figure}
 \end{frame}
 
 
 
-\begin{frame}[label={sec:org4fdeb90}]{Taxa de câmbio nominal}
+\begin{frame}[label={sec:org8466c3c}]{Taxa de câmbio nominal}
 \begin{figure}[htb]
 \centering
 \caption{ Índice da taxa de câmbio efetiva nominal\\Jun/1994=100 } 
@@ -447,7 +496,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org369fbfb}]{Taxa de juros selic}
+\begin{frame}[label={sec:org6b948ba}]{Taxa de juros selic}
 \begin{figure}[htb]
 \centering
 \caption{Taxa de juros selic a.a. (efetivo x meta)\\Anualizada base 252} 
@@ -458,17 +507,21 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org36b6308}]{Preços livres vs Administrados}
-\end{frame}
-
-\begin{frame}[label={sec:org92537eb}]{Finalmente, inflação (ops, IPCA)}
-\alert{TODO:} Revisar IPCA
-
+\begin{frame}[label={sec:org96399c4}]{Finalmente, inflação (ops, IPCA)}
 \begin{figure}[htb]
 \centering
 \caption{IPCA e Metas para Inflação} 
 \includegraphics[width = 0.9\textwidth]{./figs/IPCA.png}
 \label{fig:IPCA}
+\caption*{\textbf{Fonte:} BCB}
+\end{figure}
+\end{frame}
+\begin{frame}[label={sec:org7e33315}]{Preços livres, monitorados, serviços}
+\begin{figure}[htb]
+\centering
+\caption{IPCA e seus componentes: preços livres, monitorados e serviços} 
+\includegraphics[width = 0.65\textwidth]{./figs/Livres_Administrados.png}
+\label{fig:livres_adm}
 \caption*{\textbf{Fonte:} BCB}
 \end{figure}
 \end{frame}
